fix: align the button text.

--- a/src/app/components/home-dashboard/home/home.component.scss
+++ b/src/app/components/home-dashboard/home/home.component.scss
@@ -23,12 +23,16 @@ button {
     .name {
         position: absolute;
         z-index: 2;
-        top: calc(50% - $font-size);
+        top: 45%;
         left: 0;
         bottom: 0;
         right: 0;
 
         font-size: $font-size;
+
+        :hover {
+            background-color: transparent;
+        }
     }
 
     a {
